Adding delivery confirmation text to delivery process. In process